--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eighty4/velcro",
-  "description": "Elasticsearch utility that initializes indices, mappings and documents",
+  "description": "Elasticsearch utility for dev environments and automated testing that initializes indices, mappings and documents",
   "keywords": [
     "elasticsearch",
     "development",
@@ -12,7 +12,7 @@
     "mapping",
     "document"
   ],
-  "version": "0.0.5",
+  "version": "0.0.6",
   "license": "BSD-2-Clause",
   "main": "lib/velcro.exports.js",
   "bin": "bin/velcro",
@@ -22,16 +22,16 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^8.2.1",
-    "yaml": "^2.1.1",
-    "yargs": "^17.5.1"
+    "@elastic/elasticsearch": "^8.5.0",
+    "yaml": "^2.1.3",
+    "yargs": "^17.6.2"
   },
   "devDependencies": {
-    "@types/node": "^18.7.13",
-    "@types/yargs": "^17.0.11",
+    "@types/node": "^18.11.13",
+    "@types/yargs": "^17.0.17",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.9.4"
   },
   "files": [
     "bin",
@@ -40,7 +40,8 @@
     "lib/**/*.ts",
     "LICENSE",
     "package.json",
-    "README.md"
+    "README.md",
+    "tsconfig.json"
   ],
   "packageManager": "yarn@3.2.3"
 }
