--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "esModuleInterop": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "es2022"
+    "target": "es2022",
+    "strict": true
   },
   "include": [
     "lib/*.ts"
