--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,9 +9,23 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      elasticsearch:
+        image: elasticsearch:8.7.0
+        ports:
+          - 9200:9200
+        env:
+          discovery.type: single-node
+          xpack.security.enabled: "false"
+        options: >-
+          --health-cmd "curl -f http://localhost:9200/_cluster/health"
+          --health-start-period 30s
+          --health-interval 5s
+          --health-retries 20
+          --health-timeout 5s
     strategy:
       matrix:
-        node-version: [ 16, 18, 19 ]
+        node-version: [ 18, 19 ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
