--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prebuild": "pnpm clean",
     "build": "tsc",
     "pretest": "pnpm clean",
-    "test": "jest"
+    "test": "jest",
+    "eslint": "eslint"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.7.0",
@@ -33,6 +34,9 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.1",
     "@types/yargs": "^17.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
     "jest": "^29.5.0",
     "rimraf": "^5.0.0",
     "ts-jest": "^29.1.0",
