--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "document"
   ],
   "version": "0.0.7-15",
-  "license": "BSD-2-Clause",
+  "license": "MIT",
   "main": "lib/velcro.exports.js",
   "types": "lib/velcro.exports.d.ts",
   "bin": "bin/velcro",
