--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,7 @@ jobs:
   verified:
     runs-on: ubuntu-latest
     needs:
+      - lint
       - test
       - build
     steps:
@@ -43,6 +44,17 @@ jobs:
       - run: corepack enable && corepack prepare pnpm@latest --activate
       - run: pnpm i
       - run: pnpm test
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: corepack enable && corepack prepare pnpm@latest --activate
+      - run: pnpm i
+      - run: pnpm lint
 
   build:
     runs-on: ubuntu-latest
