--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "tsc",
     "pretest": "pnpm clean",
     "test": "jest",
-    "eslint": "eslint lib/**/*.ts"
+    "lint": "eslint lib/**/*.ts"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.7.0",
