attempt using elasticsearch as peer dependency and using es client type in api

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "yaml": "^2.2.2",
     "yargs": "^17.7.1"
   },
+  "peerDependencies": {
+    "@elastic/elasticsearch": ">=8.0.0 && <9.0.0"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.1",
