--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -115,5 +115,5 @@ jobs:
         env:
           VERSION: ${{needs.publish-prerelease.outputs.version}}
         run: |
-          docker build -t --build-arg VELCRO_VERSION=$VERSION 84tech/velcro:$VERSION .
+          docker build -t 84tech/velcro:$VERSION --build-arg VELCRO_VERSION=$VERSION .
           docker push 84tech/velcro:$VERSION
