--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,16 +1,25 @@
-name: Velcro CI
+name: Release
 
 on:
-  push:
-    branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      semver-bump:
+        description: Semver bump release type
+        required: true
+        type: choice
+        default: patch
+        options:
+          - major
+          - minor
+          - patch
 
 jobs:
 
   verified:
     uses: ./.github/workflows/verify.yml
 
-  prerelease:
-    name: Publish @next to npm
+  release:
+    name: Publish @latest to npm
     needs: verified
     runs-on: ubuntu-latest
     steps:
@@ -26,23 +35,25 @@ jobs:
         run: pnpm build
       - name: Increment version
         id: semver
-        run: echo "version=$(npm version prerelease --no-git-tag-version | tr -d '[:space:]')" >> "$GITHUB_OUTPUT"
-      - name: Publish prerelease
+        env:
+          SEMVER_BUMP: ${{github.event.inputs.semver-bump}}
+        run: echo "version=$(npm version $SEMVER_BUMP | tr -d '[:space:]')" >> "$GITHUB_OUTPUT"
+      - name: Publish release
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-        run: npm publish --public --tag next
+        run: npm publish --public
       - name: Bump ver > git
         run: |
           git config --global user.name "Adam McKee"
           git config --global user.email "adam.be.g84d@gmail.com"
-          git commit -am "increment @eighty4/velcro@next to ${{steps.semver.outputs.version}}"
-          git push
+          git commit -am "increment @eighty4/velcro@latest to ${{steps.semver.outputs.version}}"
+          git push --tags
     outputs:
       version: ${{steps.semver.outputs.version}}
 
   docker:
     name: Docker build and push
-    needs: prerelease
+    needs: release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -52,7 +63,8 @@ jobs:
           password: ${{secrets.DOCKERHUB_TOKEN}}
       - name: docker
         env:
-          VERSION: ${{needs.prerelease.outputs.version}}
+          VERSION: ${{needs.release.outputs.version}}
         run: |
-          docker build -t 84tech/velcro:$VERSION --build-arg VELCRO_VERSION=$VERSION .
-          docker push 84tech/velcro:$VERSION
+          docker build -t 84tech/velcro --build-arg VELCRO_VERSION=$VERSION .
+          docker tag 84tech/velcro 84tech/velcro:$VERSION
+          docker push -a 84tech/velcro
