concurrency group to throttle publish concurrency

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,6 +22,7 @@ jobs:
     name: Publish @latest to npm
     needs: verified
     runs-on: ubuntu-latest
+    concurrency: publish
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
