--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,21 +26,25 @@ jobs:
           node-version: 18
           registry-url: https://registry.npmjs.org
       - run: corepack enable && corepack prepare pnpm@latest --activate
+      - name: Configure git
+        run: |
+          git config --global user.name "Adam McKee"
+          git config --global user.email "adam.be.g84d@gmail.com"
       - name: Install deps
         run: pnpm i
       - name: Build
         run: pnpm build
       - name: Increment version
         id: semver
-        run: echo "version=$(npm version prerelease --no-git-tag-version | tr -d '[:space:]')" >> "$GITHUB_OUTPUT"
+        run: |
+          VERSION=$(npm version prerelease --no-git-tag-version | tr -d '[:space:]')
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
       - name: Publish prerelease
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         run: npm publish --public --tag next
       - name: Bump ver > git
         run: |
-          git config --global user.name "Adam McKee"
-          git config --global user.email "adam.be.g84d@gmail.com"
           git commit -am "increment @eighty4/velcro@next to ${{steps.semver.outputs.version}}"
           git push
     outputs:
