--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main ]
     paths-ignore:
+      - ".github/workflows/release.yml"
       - ".*ignore"
       - "LICENSE"
       - "README.md"
