deploy docs to gh pages

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,10 @@ jobs:
     needs: cut-release-commit
     uses: ./.github/workflows/verify.yml
 
+  docs:
+    needs: verified
+    uses: ./.github/workflows/www.yml
+
   prerelease:
     name: Publish @next to npm
     needs: verified
