--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "clean": "rimraf -g lib/**/*.{d.ts,js}",
     "build": "pnpm clean && tsc",
     "test": "pnpm clean && jest",
-    "lint": "eslint lib"
+    "lint": "eslint lib",
+    "typedoc": "pnpm build && typedoc --out www/docs lib/velcro.exports.ts"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.7.0",
@@ -32,6 +33,7 @@
     "@elastic/elasticsearch": ">=8.0.0 && <9.0.0"
   },
   "devDependencies": {
+    "typedoc": "0.24.8",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.14",
     "@types/yargs": "^17.0.24",
