--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -34,7 +34,7 @@ jobs:
           --health-timeout 5s
     strategy:
       matrix:
-        node-version: [ 18, 20 ]
+        node-version: [ 18, 20, 21 ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
       - run: corepack enable && corepack prepare pnpm@latest --activate
       - run: pnpm i
       - run: pnpm lint
@@ -59,7 +59,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 18, 20 ]
+        node-version: [ 18, 20, 21 ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
